# replaCy

./: .gitignore  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  build.sh  build_release.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py
.github/: pull_request_template.md
.github/workflows/: main.yml  pub.yaml
replacy/: __init__.py  custom_patterns.py  db.py  default_match_hooks.py  default_scorer.py  filter_0distance.py  filter_spans_by_cat.py  inflector.py  ref_matcher.py  scorer.py  suggestion.py  suggestion_joiner.py  test_helper.py  util.py  version.py
replacy/resources/: forms_lookup.json  match_dict.json  match_dict_schema.json  patterns_test_data.json  test.arpa
tests/: resources_test.py  test_custom_props.py  test_hooks.py  test_inflector.py  test_max_count.py  test_multiple_whitespaces.py  test_pipeline.py  test_ref_matcher.py  test_replacy.py  test_scorer.py  test_suggestions.py
